# wasm-cpp

./: .gitignore  .wasm_base.h.swp  .wasm_instruction.h.swp  CMakeLists.txt  MIT-LICENSE  deleteme.py  main.cpp  readme.md  wasm-cpp  wasm_array.h  wasm_base.h  wasm_globals.h  wasm_instruction.h  wasm_instruction_types.h  wasm_linear_memory.h  wasm_program_state.h  wasm_table.h  wasm_value.h
bench/: leb128_bench.cpp
frontend/: IdDict.py  ModuleDef.py  ProgramDef.py  WasmBinaryParser.py  constants.py  main.py  module.py  opcodes.py  wasm_cpp_pymain.py
frontend/cparse/: codeparse.cpp  setup.py  test.py
frontend/glue/: buffer_utils.h  create_program.cpp  create_program.h  read_program_def.cpp  read_program_def.h
frontend/leb128/: .leb128.h.swp  leb128.h
frontend2/: ModuleDef.h  binparse.h  example.cpp  leb128_s_parser.h  leb128_u_parser.h  test.cpp  test2.cpp  testleb128.cpp  tmp.h  x3binparse.h
frontend2/binparse/: .types.h.swp  helpers.h  leb128_parsers.h  rule_defs.h  rules.cpp  rules.h  types.h
function/: .wasm_function.h.swp  wasm_function.cpp  wasm_function.h  wasm_function_storage.c  wasm_function_storage.h
globals/: wasm_globals.h
include/: Context.h  DebugWasmValue.h  WasmInstruction.h  a.out  test.cpp  wasm_base.h  wasm_instruction.h  wasm_value.h
include/frontend/: create_program.h
include/function/: Analysis.h  AnyFunction.h  CFunction.h  Function.h  TableFunction.h  WasmCode.h  WasmFunction.h  WasmFunctionSignature.h  (+4 more)
interpreter/: .wasm_interpreter.h.swp  WasmCallStack.c  WasmCallStack.h  bitutils.h  functional_ex.h  wasm_call_stack.h  wasm_call_stack_frame.c  wasm_control_flow_stack.h  wasm_interpreter.cpp  wasm_interpreter.h
module/: .swp  .wasm_module.h.swp  wasm_import.h  wasm_linear_memory.h  wasm_module.h  wasm_module_functions.h  wasm_program_state.cpp  wasm_program_state.h  wasm_resizable_limits.h  wasm_table.h
parse/: code_parser.h  wasm_binary_parser.h  wasm_function.h  wasm_function_def.h  wasm_module.h  wasm_module_def.h  wasm_module_section_parser.h  wasm_types.h
src/: main.cpp  wasm_instruction.cpp  wasm_value.cpp
store/: wasm_functions.h  wasm_global_variables.h  wasm_linear_memories.h  wasm_tables.h
test/: assert.wasm  assert.wast  assert_return.wast  control_flow.wasm  control_flow.wast  f32.wasm  f32.wast  i32.wasm  i32.wast  i64.wast  main.cpp  python.valgrind.supp  test  tests.py  valgrind-python.supp
utilities/: bit_cast.h  endianness.h  hash_combine.h  immediates.h
(+100 files in other folders)
